updated some styling and icons

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js"></script>
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
 </head>
 <body>
     <div id="container">
-        <h1>TO-DO LIST</h1>
+        <h1>TO-DO LIST <i class="fas fa-pencil-alt"></i></h1>
         <input type="text" placeholder="Add New Task" name="" id="">
         <ul>
-            <li><span>X</span> Go to store</li>
-            <li><span>X</span> Finish HW</li>
-            <li><span>X</span> Answer E-Mail</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Go to store</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Finish HW</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Answer E-Mail</li>
         </ul>
     </div>
 
